@@ -4,7 +4,7 @@ from borgmatic.hooks import healthchecks as module
 
 
 def test_forgetful_buffering_handler_emit_collects_log_records():
-    handler = module.Forgetful_buffering_handler(byte_capacity=100)
+    handler = module.Forgetful_buffering_handler(byte_capacity=100, log_level=1)
     handler.emit(flexmock(getMessage=lambda: 'foo'))
     handler.emit(flexmock(getMessage=lambda: 'bar'))
 
@@ -13,7 +13,7 @@ def test_forgetful_buffering_handler_emit_collects_log_records():
 
 
 def test_forgetful_buffering_handler_emit_forgets_log_records_when_capacity_reached():
-    handler = module.Forgetful_buffering_handler(byte_capacity=len('foo\nbar\n'))
+    handler = module.Forgetful_buffering_handler(byte_capacity=len('foo\nbar\n'), log_level=1)
     handler.emit(flexmock(getMessage=lambda: 'foo'))
     assert handler.buffer == ['foo\n']
     handler.emit(flexmock(getMessage=lambda: 'bar'))
@@ -26,7 +26,7 @@ def test_forgetful_buffering_handler_emit_forgets_log_records_when_capacity_reac
 
 
 def test_format_buffered_logs_for_payload_flattens_log_buffer():
-    handler = module.Forgetful_buffering_handler(byte_capacity=100)
+    handler = module.Forgetful_buffering_handler(byte_capacity=100, log_level=1)
     handler.buffer = ['foo\n', 'bar\n']
     flexmock(module.logging).should_receive('getLogger').and_return(flexmock(handlers=[handler]))
 
@@ -36,7 +36,7 @@ def test_format_buffered_logs_for_payload_flattens_log_buffer():
 
 
 def test_format_buffered_logs_for_payload_inserts_truncation_indicator_when_logs_forgotten():
-    handler = module.Forgetful_buffering_handler(byte_capacity=100)
+    handler = module.Forgetful_buffering_handler(byte_capacity=100, log_level=1)
     handler.buffer = ['foo\n', 'bar\n']
     handler.forgot = True
     flexmock(module.logging).should_receive('getLogger').and_return(flexmock(handlers=[handler]))
@@ -63,7 +63,13 @@ def test_ping_monitor_hits_ping_url_for_start_state():
         '{}/{}'.format(ping_url, 'start'), data=''.encode('utf-8')
     )
 
-    module.ping_monitor(ping_url, 'config.yaml', state=module.monitor.State.START, dry_run=False)
+    module.ping_monitor(
+        ping_url,
+        'config.yaml',
+        state=module.monitor.State.START,
+        monitoring_log_level=1,
+        dry_run=False,
+    )
 
 
 def test_ping_monitor_hits_ping_url_for_finish_state():
@@ -74,7 +80,13 @@ def test_ping_monitor_hits_ping_url_for_finish_state():
         ping_url, data=payload.encode('utf-8')
     )
 
-    module.ping_monitor(ping_url, 'config.yaml', state=module.monitor.State.FINISH, dry_run=False)
+    module.ping_monitor(
+        ping_url,
+        'config.yaml',
+        state=module.monitor.State.FINISH,
+        monitoring_log_level=1,
+        dry_run=False,
+    )
 
 
 def test_ping_monitor_hits_ping_url_for_fail_state():
@@ -85,7 +97,13 @@ def test_ping_monitor_hits_ping_url_for_fail_state():
         '{}/{}'.format(ping_url, 'fail'), data=payload.encode('utf')
     )
 
-    module.ping_monitor(ping_url, 'config.yaml', state=module.monitor.State.FAIL, dry_run=False)
+    module.ping_monitor(
+        ping_url,
+        'config.yaml',
+        state=module.monitor.State.FAIL,
+        monitoring_log_level=1,
+        dry_run=False,
+    )
 
 
 def test_ping_monitor_with_ping_uuid_hits_corresponding_url():
@@ -96,7 +114,13 @@ def test_ping_monitor_with_ping_uuid_hits_corresponding_url():
         'https://hc-ping.com/{}'.format(ping_uuid), data=payload.encode('utf-8')
     )
 
-    module.ping_monitor(ping_uuid, 'config.yaml', state=module.monitor.State.FINISH, dry_run=False)
+    module.ping_monitor(
+        ping_uuid,
+        'config.yaml',
+        state=module.monitor.State.FINISH,
+        monitoring_log_level=1,
+        dry_run=False,
+    )
 
 
 def test_ping_monitor_dry_run_does_not_hit_ping_url():
@@ -104,4 +128,10 @@ def test_ping_monitor_dry_run_does_not_hit_ping_url():
     ping_url = 'https://example.com'
     flexmock(module.requests).should_receive('post').never()
 
-    module.ping_monitor(ping_url, 'config.yaml', state=module.monitor.State.START, dry_run=True)
+    module.ping_monitor(
+        ping_url,
+        'config.yaml',
+        state=module.monitor.State.START,
+        monitoring_log_level=1,
+        dry_run=True,
+    )
