@@ -1,5 +1,6 @@
 1.4.23.dev0
  * #274: Add ~/.config/borgmatic.d as another configuration directory default.
+ * #277: Customize Healthchecks log level via borgmatic "--monitoring-verbosity" flag.
  * For "create" and "prune" actions, no longer list files or show detailed stats at verbosity 1. You
    can opt back in with "--files" or "--stats" flags.
 
